--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -129,6 +129,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="MenuToggleRight",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=OculusTouch_Right_Thumbstick_Click)
 +ActionMappings=(ActionName="SpectatorFadeToggle",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Top)
 +ActionMappings=(ActionName="SpectatorActiveToggle",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Bottom)
++ActionMappings=(ActionName="TriggerLeft",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=E)
 +AxisMappings=(AxisName="MovementAxisLeft_X",Scale=1.000000,Key=OculusTouch_Left_Thumbstick_X)
 +AxisMappings=(AxisName="GrabAxisLeft",Scale=1.000000,Key=OculusTouch_Left_Grip_Axis)
 +AxisMappings=(AxisName="MovementAxisLeft_Y",Scale=1.000000,Key=OculusTouch_Left_Thumbstick_Y)
@@ -179,6 +180,12 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="SpectatorMoveUp",Scale=-1.000000,Key=Gamepad_LeftShoulder)
 +AxisMappings=(AxisName="SpectatorFOV",Scale=1.000000,Key=Gamepad_RightTriggerAxis)
 +AxisMappings=(AxisName="SpectatorFOV",Scale=-1.000000,Key=Gamepad_LeftTriggerAxis)
++AxisMappings=(AxisName="walk forwards",Scale=1.000000,Key=W)
++AxisMappings=(AxisName="walk forwards",Scale=-1.000000,Key=S)
++AxisMappings=(AxisName="walk sideways",Scale=1.000000,Key=D)
++AxisMappings=(AxisName="walk sideways",Scale=-1.000000,Key=A)
++AxisMappings=(AxisName="up",Scale=1.000000,Key=MouseY)
++AxisMappings=(AxisName="side",Scale=1.000000,Key=MouseX)
 DefaultPlayerInputClass=/Script/Engine.PlayerInput
 DefaultInputComponentClass=/Script/Engine.InputComponent
 DefaultTouchInterface=None
