--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -195,6 +195,11 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="walk sideways",Scale=-1.000000,Key=A)
 +AxisMappings=(AxisName="up",Scale=1.000000,Key=MouseY)
 +AxisMappings=(AxisName="side",Scale=1.000000,Key=MouseX)
++AxisMappings=(AxisName="walk forwards",Scale=1.000000,Key=OculusTouch_Left_Thumbstick_Up)
++AxisMappings=(AxisName="walk forwards",Scale=-1.000000,Key=OculusTouch_Left_Thumbstick_Down)
++AxisMappings=(AxisName="walk sideways",Scale=-1.000000,Key=OculusTouch_Left_Thumbstick_Left)
++AxisMappings=(AxisName="walk sideways",Scale=1.000000,Key=OculusTouch_Left_Thumbstick_Right)
++AxisMappings=(AxisName="walk forwards",Scale=-1.000000,Key=OculusTouch_Left_Thumbstick_Y)
 DefaultPlayerInputClass=/Script/Engine.PlayerInput
 DefaultInputComponentClass=/Script/Engine.InputComponent
 DefaultTouchInterface=None
